--- a/css/global.css
+++ b/css/global.css
@@ -1,30 +1,14 @@
 :root {
-    --primary-color: #ffffff; /* White */
-    --secondary-color: #14213D; /* Dark navy blue */
+    --primary-color: #ffffff;
+    --secondary-color: #14213D;
     --text-color: #000000;
     --hover-background: rgba(0, 0, 0, 0.698);
-    --dark-background: #020122; /* Dark Blue */
-    --light-background: #e5e5e5; /* Light gray */
+    --dark-background: #020122;
+    --light-background: #e5e5e5;
     --other-background: #ff6739;
+    --other-background-dark: #707070;
     --light-qa: #e1ddff;
     --light-qa2: #c7ebff;
-}
-
-
-
-/* Dark mode variables */
-@media (prefers-color-scheme: dark) {
-    :root {
-        --primary-color: #14213D;
-        --secondary-color: #ffffff;
-        --hover-background: rgba(123, 78, 78, 0.3);
-        --text-color: #ffffff;
-        --dark-background: #9a9999;
-        --light-background: #515151;
-        --other-background: #88371e;
-        --light-qa: #414048;
-        --light-qa2: #576770;
-    }
 }
 
 
@@ -74,6 +58,7 @@
     font-size: 1rem;
     text-align: center; /* Center horizontally */
     color: var(--text-color);
+    font-family: "Roboto", sans-serif;
 }
 
 
@@ -117,13 +102,14 @@ a:focus {
 
 /* Bring menu on-screen */
 .side-menu:not(.hidden) {
-    transform: translateX(0); /* Ensure this class aligns with the "show" class */
-    left: 0; /* Align properly */
+    transform: translateX(0);
+    left: 0;
 }
 
 /* Menu item styles */
 .side-menu li {
     list-style: none;
+    font-family: "Roboto", sans-serif;
 }
 
 .side-menu li a {
@@ -149,6 +135,7 @@ a:focus {
     font-size: .75rem;
     cursor: pointer;
     z-index: 20;
+    font-family: "Roboto", sans-serif;
 }
 
 
@@ -171,7 +158,7 @@ a:focus {
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center; /* Center the items horizontally */
+    justify-content: center;
 }
 
 #section-menu ul li {
@@ -184,6 +171,7 @@ a:focus {
     padding: 8px 12px;
     display: inline-block;
     border-radius: 10px;
+    font-family: "Roboto", sans-serif;
 }
 
 #section-menu ul li a:hover {
@@ -200,6 +188,7 @@ a:focus {
     color: var(--primary-color);
     padding: 5px;
     text-align: center;
+    font-family: "Roboto", sans-serif;
 }
 
 
@@ -283,7 +272,7 @@ a:focus {
 @media (min-width: 1050px) {
     /* Fixed banner */
     .banner h1 {
-        font-size: 2rem;
+        font-size: 1.5rem;
         text-align: center; /* Center horizontally */
         color: var(--text-color);
     }
@@ -316,6 +305,48 @@ a:focus {
     }
 }
 
+
+
+/* Additional rules for dark mode */
+@media (prefers-color-scheme: dark) {
+
+    body {
+        background-color: var(--text-color);
+    }
+
+    .banner {
+        background: var(--dark-background);
+    }
+
+    .banner h1 {
+        color: var(--primary-color);
+    }
+
+    button:focus,
+    .menu-button:focus,
+    a:focus {
+        outline: 1px solid var(--link-color);
+    }
+
+    /* Side menu styling, hidden by default */
+    .side-menu {
+        background: var(--dark-background);
+    }
+
+    .side-menu li a {
+        color: var(--other-background);
+    }
+
+    .side-menu li a:hover {
+        background: rgba(10, 227, 104, 0);
+    }
+
+    /* Style the side menu button */
+    #menu-toggle {
+        background: var(--dark-background);
+        color: var(--primary-color)
+    }
+}
 
 
 
